--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
-    "@types/react": "^18.3.13",
+    "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.1",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.465.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
