--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-slick": "^0.23.13",
     "@types/recharts": "^1.8.29",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
