--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.1",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.465.0",
     "react": "^18.3.1",
@@ -24,6 +26,7 @@
     "recharts": "^2.14.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "tsparticles": "^3.7.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react-slick": "^0.23.13",
     "@types/recharts": "^1.8.29",
     "@types/styled-components": "^5.1.34",
