--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@popperjs/core": "^2.11.8",
@@ -16,10 +18,12 @@
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.1",
     "canvas-confetti": "^1.9.3",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.465.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
